Some refactoring and fix of bags: Add images to list and db Move modal window in Posts component to unshift new post in list after adding Fix of bug after add/remove posts of moving data(fix key prop in post from index to id) Move delete post functionality to Posts => remove unusable props from Post component Add img placeholder if Post doesn't have image

--- a/src/components/Post/Post.module.css
+++ b/src/components/Post/Post.module.css
@@ -62,6 +62,7 @@
 .body__footer{
     display: flex;
     justify-content: space-between;
+    align-items: end;
 }
 
 .price{
@@ -72,4 +73,18 @@
     color: #00A898;
     font-size: 24px;
     cursor: pointer;
+}
+.photo{
+    min-width: 100px;
+    min-height: 100px;
+    max-width: 150px;
+    max-height: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+}
+.photo img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
